css/MainSoloPage.css
.main__section{
    background-color: var(--main-dark-color);
    height: 100vh;
    width: 100vw;
    border: 2px solid green;
    padding-inline: 5%;
}

.topic__section{
    display: flex;
    justify-content: center;
    text-decoration: underline;
    font-family: 'Comfortaa', sans-serif;

}

.text-outline {
    text-shadow:
      0.5px 0 var(--main-yellow-color),
      0 -0.5px var(--main-yellow-color),
      -0.5px 0 var(--main-yellow-color),
      0 0.5px var(--main-yellow-color);
  }

.text-shadowing{
    text-shadow: var(--main-yellow-color) 1px 0 10px;
}

#myPhoto{
    background-image: url(../src/aboutMe.jpg);
    background-position: center center;
    background-size: cover;
    width: 100%;
    height: auto;
    border-radius: 50px;
}

/* img {
	max-width: 100%;
	height: auto;
	display: inline-block;
    border-radius: 10px;
} */

.circle{
    width: 200px;
    height: 200px;
    background: teal;
    -webkit-clip-path: circle(30% at 50% 50%);
            clip-path: circle(30% at 50% 50%);
}

.grid-wrapper {
    height: 100%;
    width: 100%;
	display: grid;
	grid-gap: 10px;
	grid-template-columns: minmax(min-content, 50%) 1fr;
    grid-template-rows: minmax(min-content, 50%) 1fr;
}


.grid-wrapper>div{
    border: 2px solid purple;
}

.grid-wrapper>div:nth-child(1){
    display: flex;
    justify-content: center;
}

.grid-wrapper .wide {
	grid-column: span 2;
}
.grid-wrapper .tall {
	grid-row: span 2;
}
.grid-wrapper .big {
	grid-column: span 2;
	grid-row: span 2;
}
.grid-wrapper .normal {
	grid-column: span 1;
	grid-row: span 1;
}

.cards{
    display: flex;
    justify-content: center;
    align-items: center;
    margin: auto;
    width:80%;
    height: 100%;
}


.card-item{
    display: none;
    width: 100%;
    height: 90%;
    border: 2px solid rgb(162, 255, 56);
    overflow-x: hidden;
    border-radius: 10px;
    grid-template-columns: 1fr;
    grid-template-rows: 30% 70%;
    justify-content: center;
    padding:5% 10%;
    
}

.active{
    display: grid;
}

.card-name{
    display: flex;
    font-family: 'Comfortaa', sans-serif;
    font-size: clamp(1rem, 4vw, 3rem);
    text-decoration: underline wavy 2px;
    text-underline-offset: 5vh;
    border: 2px solid green;
    height: 100%;
    width: 100%;
    justify-content: center;
    align-items: center;
}

.card-description{
    border: 2px solid green;
    
}

.card__move{
    height: 10%;
    width: 10%;
    background-color: transparent;
    cursor: pointer;
    background-repeat: no-repeat;
    background-position: 50%;
    border: 0;
}

#btn__prev__card{
    background-image: url(../src/arrowLeft.svg);
}

#btn__next__card{
    background-image: url(../src/arrowRight.svg);
}



@keyframes rotate-90-bottom-cw {
    0%{
        -webkit-transform: rotate(0);
        transform: rotate(0);
        -webkit-transform-origin: bottom;
        transform-origin: bottom;
    }
    100%{
        -webkit-transform: rotate(90deg);
        transform: rotate(90deg);
        -webkit-transform-origin: bottom;
        transform-origin: bottom;
    }
}

